Bug 273072 - [Net] Provide native proxy support on x86_64 Linux

--- a/bundles/org.eclipse.core.net/fragments/org.eclipse.core.net.linux.x86_64/fragment.properties
+++ b/bundles/org.eclipse.core.net/fragments/org.eclipse.core.net.linux.x86_64/fragment.properties
@@ -8,5 +8,5 @@
 # Contributors:
 #     IBM Corporation - initial API and implementation
 ###############################################################################
-fragmentName = Proxy for Linux
+fragmentName = Proxy for Linux x86_64
 providerName = Eclipse.org
