--- a/bundles/org.eclipse.e4.ui.bindings/build.properties
+++ b/bundles/org.eclipse.e4.ui.bindings/build.properties
@@ -1,5 +1,5 @@
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               OSGI-INF/
+               OSGI-INF/,
 source.. = src/
