--- a/bundles/org.eclipse.e4.ui.model.workbench/plugin.xml
+++ b/bundles/org.eclipse.e4.ui.model.workbench/plugin.xml
@@ -11,7 +11,7 @@
  Contributors:
       IBM Corporation - initial API and implementation
 
- $Id: plugin.xml,v 1.1 2008/11/11 18:19:11 bbokowski Exp $
+ $Id: plugin.xml,v 1.2 2009/10/14 18:28:11 emoffatt Exp $
 -->
 
 <plugin>
@@ -19,53 +19,7 @@
    <extension point="org.eclipse.emf.ecore.generated_package">
       <package
             uri="http://www.eclipse.org/ui/2008/Application"
-            class="org.eclipse.e4.ui.model.application.ApplicationPackage"/>
+            class="org.eclipse.e4.ui.model.application.MApplicationPackage"/>
    </extension>
-
-   <extension point="org.eclipse.emf.ecore.content_parser">
-      <parser
-            contentTypeIdentifier="org.eclipse.e4.ui.model.application"
-            class="org.eclipse.e4.ui.model.application.util.ApplicationResourceFactoryImpl"/>
-   </extension>
-
-   <extension point="org.eclipse.core.contenttype.contentTypes">
-      <content-type
-            base-type="org.eclipse.emf.ecore.xmi"
-            file-extensions="org.eclipse.e4.ui.model.application,xmi"
-            id="org.eclipse.e4.ui.model.application"
-            name="%_UI_Application_content_type"
-            priority="normal">
-         <describer class="org.eclipse.emf.ecore.xmi.impl.RootXMLContentHandlerImpl$Describer">
-            <parameter name="namespace" value="http://www.eclipse.org/ui/2008/Application"/>
-            <parameter name="kind" value="xmi"/>
-         </describer>
-      </content-type>
-   </extension>
-
-   <extension point="org.eclipse.emf.ecore.generated_package">
-      <package
-            uri="http://www.eclipse.org/ui/2008/Workbench"
-            class="org.eclipse.e4.ui.model.workbench.WorkbenchPackage"/>
-   </extension>
-
-   <extension point="org.eclipse.emf.ecore.content_parser">
-      <parser
-            contentTypeIdentifier="org.eclipse.e4.ui.model.workbench"
-            class="org.eclipse.e4.ui.model.workbench.util.WorkbenchResourceFactoryImpl"/>
-   </extension>
-
-   <extension point="org.eclipse.core.contenttype.contentTypes">
-      <content-type
-            base-type="org.eclipse.emf.ecore.xmi"
-            file-extensions="workbench,xmi"
-            id="org.eclipse.e4.ui.model.workbench"
-            name="%_UI_Workbench_content_type"
-            priority="normal">
-         <describer class="org.eclipse.emf.ecore.xmi.impl.RootXMLContentHandlerImpl$Describer">
-            <parameter name="namespace" value="http://www.eclipse.org/ui/2008/Workbench"/>
-            <parameter name="kind" value="xmi"/>
-         </describer>
-      </content-type>
-   </extension>
-
+   
 </plugin>
