Fix for Bug 292948 - [UI] Clean up Application / Workbench life cycle

--- a/examples/org.eclipse.e4.demo.contacts/plugin.xml
+++ b/examples/org.eclipse.e4.demo.contacts/plugin.xml
@@ -20,7 +20,7 @@
          id="product"
          point="org.eclipse.core.runtime.products">
       <product
-            application="org.eclipse.e4.ui.workbench.swt.application"
+            application="org.eclipse.e4.ui.workbench.swt.E4Application"
             name="E4 Contacs Demo">
          <property
                name="appName"
