--- a/examples/org.eclipse.e4.demo.e4photo/plugin.xml
+++ b/examples/org.eclipse.e4.demo.e4photo/plugin.xml
@@ -43,7 +43,7 @@
          id="product"
          point="org.eclipse.core.runtime.products">
       <product
-            application="org.eclipse.e4.ui.workbench.swt.application"
+            application="org.eclipse.e4.ui.workbench.swt.E4Application"
             name="e4 photo demo">
          <property
                name="appName"
