Fixed bug 295204: "Preferences..." menu item in Java editor does not have accelerator added to it.

--- a/org.eclipse.ui.editors/src/org/eclipse/ui/texteditor/ConstructedTextEditorMessages.properties
+++ b/org.eclipse.ui.editors/src/org/eclipse/ui/texteditor/ConstructedTextEditorMessages.properties
@@ -89,7 +89,7 @@ Editor.RulerPreferencesAction.description=Show ruler preferences
 Editor.RulerPreferencesAction.tooltip=Show Preferences
 Editor.RulerPreferencesAction.image=
 
-Editor.ContextPreferencesAction.label=Preferences...
+Editor.ContextPreferencesAction.label=Pre&ferences...
 Editor.ContextPreferencesAction.description=Show preferences
 Editor.ContextPreferencesAction.tooltip=Show Preferences
 Editor.ContextPreferencesAction.image=
