Bug 293744  [Webapp]Allow additional section to be added to the bar upside:

--- a/org.eclipse.help.webapp/src/org/eclipse/help/internal/webapp/WebappResources.properties
+++ b/org.eclipse.help.webapp/src/org/eclipse/help/internal/webapp/WebappResources.properties
@@ -128,6 +128,7 @@ remotePreferencesMenuSelect=Window &gt Preferences &gt Help &gt Content
 # Frame Titles 
 ignore=Layout frame: {0}
 helpToolbarFrame=Main Help Toolbar
+SearchFrame=Search Toolbar
 TabsFrame=Selection of Navigation Views
 topicView=Topic View
 topicViewToolbar=Topic View Toolbar
