Bug 293747  [Help][Print]Add maximum printed topics and maximum connections to the preference to optimize the quick print operation:

--- a/org.eclipse.help.base/preferences.ini
+++ b/org.eclipse.help.base/preferences.ini
@@ -190,3 +190,18 @@ highlight-on=true
 # Increases security  by preventing urls referencing external sites from being passed
 # in as the topic parameter. 
 restrictTopicParameter=true
+
+########################
+# Properties defined for Quick Print
+########################
+# Max connection numbers for concurrent print(print selected topic and all subtopics)
+# Assign a value no greater than Integer.MAX_VALUE
+# Assign nothing to accept the default settings of the application
+# Example: maxConnections=
+maxConnections=10
+
+# Max topic numbers allowed for print in one request
+# Assign a value no greater than Integer.MAX_VALUE
+# Assign nothing to accept the default settings of the application
+# Example: maxTopics=
+maxTopics=500
