--- a/org.eclipse.help.webapp/src/org/eclipse/help/internal/webapp/WebappResources.properties
+++ b/org.eclipse.help.webapp/src/org/eclipse/help/internal/webapp/WebappResources.properties
@@ -182,3 +182,10 @@ aboutPlugins=About Plug-Ins
 userAgent=User Agent
 preferences=Preferences
 badPreferences=Unable to read preferences
+
+# Quick print page
+topicNumExceeded=You have chosen to print {0} individual topics. The maximum number of topics allowed to be printed is {1}. To continue printing the first {1} documents of your selection click ''{2}''. Click ''{3}'' to cancel this print job. 
+noConnection=The maximum capacity for active connections to the server has been reached. Unfortunately, your print job can not be completed at this time. Please try again.\n
+ioException=An error occured during content retrieval.\n
+alert=Alert 
+error=Error
