bug 293130 - Polishing the Filter extension point

--- a/bundles/org.eclipse.core.resources/plugin.properties
+++ b/bundles/org.eclipse.core.resources/plugin.properties
@@ -19,7 +19,7 @@ teamHookName = Team Hook
 preferencesContentTypeName = Preferences
 refreshProvidersName=Refresh Providers
 modelProviders=Model Providers
-filters=Filters
+filterMatchers=Filter Matchers
 preferencesExtPtName=Resource Preferences
 resourceModelName=File System Resources
 
