--- a/bundles/org.eclipse.core.filesystem/natives/unix/linux/Makefile
+++ b/bundles/org.eclipse.core.filesystem/natives/unix/linux/Makefile
@@ -1,5 +1,5 @@
 #**********************************************************************
-# Copyright (c) 2000, 2004 IBM Corporation and others.
+# Copyright (c) 2000, 2009 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials 
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -29,4 +29,4 @@ core :
 	gcc $(OPT_FLAGS) -shared -Wl,-soname,$(LIB_NAME) -o $(LIB_NAME_FULL) $(CORE.O) -lc
 
 clean :
-	rm *.o
+	rm -f $(CORE.O) $(LIB_NAME_FULL)
