--- a/bundles/org.eclipse.ui.ide/plugin.properties
+++ b/bundles/org.eclipse.ui.ide/plugin.properties
@@ -47,6 +47,8 @@ NewWizards.folder = Folder
 NewWizards.folder.description = Create a new folder resource
 NewWizards.file = File
 NewWizards.file.description = Create a new file resource
+NewWizards.group = Group
+NewWizards.group.description = Create a new group resource
 
 PreferencePages.Workbench = General
 PreferencePages.Editors = Editors
