--- a/org.eclipse.ui.intro.universal/build.properties
+++ b/org.eclipse.ui.intro.universal/build.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2005, 2006 IBM Corporation and others.
+# Copyright (c) 2005, 2009 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -17,8 +17,7 @@ bin.includes = plugin.xml,\
                .options,\
                about.html,\
                universal.jar
-src.includes = about.html,\
-               .options
+src.includes = about.html
 jars.compile.order = universal.jar
 source.universal.jar = src/
 output.universal.jar = bin/
