bug 259643 - LocalFileNatives.internalSetFileInfo only sets exec bit for owner.

--- a/bundles/org.eclipse.core.filesystem/natives/unix/solaris/Makefile
+++ b/bundles/org.eclipse.core.filesystem/natives/unix/solaris/Makefile
@@ -1,13 +1,13 @@
 #**********************************************************************
-# Copyright (c) 2000, 2007 IBM Corporation and others.
+# Copyright (c) 2000, 2009 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials 
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
 # http://www.eclipse.org/legal/epl-v10.html
 # 
 # Contributors:
-#     IBM Corporation - initial API and implementation
-# Martin Oberhuber (Wind River) - [183137] adapted from Linux for Solaris
+#	IBM Corporation - initial API and implementation
+#	Martin Oberhuber (Wind River) - [183137] adapted from Linux for Solaris
 #********************************************************************** 
 #
 # makefile for liblocalfile.so
@@ -21,27 +21,29 @@ LIB_NAME_FULL = liblocalfile_1_0_0.so
 OS_TYPE = solaris
 
 #Set this to be the location of your JRE
-JAVA_HOME = ~/vm/sun142
+JAVA_HOME = 
 
 JDK_INCLUDE = -I ${JAVA_HOME}/include -I ${JAVA_HOME}/include/${OS_TYPE}
 COMMON_INCLUDE = -I include
 #Solaris native cc uses -K PIC, gcc uses -fPIC
 #To build native, use:     make
 #To build with debug, use: make OPT_FLAGS=-g
-#To build with gcc, use:   make CC=gcc PICFLAG=-fPIC
-PICFLAG=-K PIC 
-#PICFLAG=-fPIC
-OPT_FLAGS=-O -s -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64
-#OPT_FLAGS=-g -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64
+#To build for SPARC V9, use: make ARCH=v9
+
+PICFLAG=-KPIC
+ARCH=v8
+
+CFLAGS = -G -O -s $(PICFLAG) -xarch=$(ARCH) -mt -xregs=no%appl -xstrconst -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64
+LDFLAGS = -G -O -s $(PICFLAG) -lc -xarch=$(ARCH) -mt -z defs -z text -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64
 
 $(LIB_NAME_FULL) : $(CORE.C)
-	$(CC) $(OPT_FLAGS) $(PICFLAG) -c $(JDK_INCLUDE) $(COMMON_INCLUDE) -o $(CORE.O) $(CORE.C)
-	$(CC) $(OPT_FLAGS) -G -o $(LIB_NAME_FULL) $(CORE.O) -lc
+	$(CC) $(CFLAGS) -c $(JDK_INCLUDE) $(COMMON_INCLUDE) -o $(CORE.O) $(CORE.C)
+	$(CC) $(LDFLAGS) -o $(LIB_NAME_FULL) $(CORE.O) -lc
 
 core : $(LIB_NAME_FULL)
 
 clean :
-	rm *.o
+	rm *.o *.so
 
 install : $(LIB_NAME_FULL)
 	cp -f $(LIB_NAME_FULL) ../../../../org.eclipse.core.filesystem.solaris.sparc/os/solaris/sparc/
