Bug 293745  [Help][Search]Provide enhancement for quick search function:

--- a/org.eclipse.help.webapp/src/org/eclipse/help/internal/webapp/WebappResources.properties
+++ b/org.eclipse.help.webapp/src/org/eclipse/help/internal/webapp/WebappResources.properties
@@ -27,7 +27,9 @@ PrintMulti=Print topics
 PrintTopic=Print selected topic
 PrintToc=Print selected topic and all subtopics
 PrintError=You must select a valid topic to print
-QuickSearch=Search selected topic and all subtopics
+QuickSearchMulti=Search topics
+QuickSearchTopic=Search selected topic
+QuickSearchToc=Search selected topic and all subtopics
 TocHeading=Contents
 Close=Close
 Nothing_found=Nothing found.
