Bug 296462 -  Java source lookup dialog eagerly dismisses itself

--- a/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/sourcelookup/SourceLookupUIMessages.properties
+++ b/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/sourcelookup/SourceLookupUIMessages.properties
@@ -22,7 +22,7 @@ sourceTab_tabTitle = Source
 sourceTab_defaultButton = Restore Defa&ult
 
 addSourceLocation_title = Add Source
-addSourceLocation_description = Select the type of source to add to the source lookup path
+addSourceLocation_description = Add a container to the source lookup path
 
 addSourceLocation_addButton2 = &Edit Source Lookup Path...
 addSourceLocation_editorMessage = Source not found.
@@ -46,6 +46,7 @@ ResolveDuplicatesHandler_1=Choose a source file (? = any character, * = any stri
 EditSourceLookupPathAction_0=Edit Source Loo&kup...
 LookupSourceAction_0=Lookup &Source
 ExternalArchiveSourceContainerBrowser_2=Select Source Archive
+AddSourceContainerDialog_select_source_container=Select a source container to add
 ArchiveSourceContainerBrowser_3=Archive Selection
 ArchiveSourceContainerBrowser_4=Choose archives to add:
 DirectorySourceContainerDialog_0=Directory Selection
