Bug 294643 -  [events] Standardize event topics The Gen topic application, just for safe keeping

--- a/bundles/org.eclipse.e4.ui.workbench.swt/plugin.xml
+++ b/bundles/org.eclipse.e4.ui.workbench.swt/plugin.xml
@@ -27,5 +27,18 @@
          </run>
       </application>
    </extension>
+   <extension
+         id="GenTopic"
+         name="Internal Model Topic Generator"
+         point="org.eclipse.core.runtime.applications">
+      <application
+            cardinality="singleton-global"
+            thread="main"
+            visible="true">
+         <run
+               class="org.eclipse.e4.ui.workbench.swt.internal.GenTopic">
+         </run>
+      </application>
+   </extension>
 
 </plugin>
