Bug 296461 -  Source lookup dialog does not have a description

--- a/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/sourcelookup/SourceLookupUIMessages.properties
+++ b/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/sourcelookup/SourceLookupUIMessages.properties
@@ -37,7 +37,7 @@ folderSelection_title=Folder Selection
 folderSelection_label=&Choose folders to add:
 
 manageSourceDialog_title = Edit Source Lookup Path
-manageSourceDialog_description = Edit the path used to locate source files.
+manageSourceDialog_description = Edit the source lookup path
 
 sourceLookupPanel_1 = Unable to apply source lookup path changes.
 sourceLookupPanel_2 = Launch configuration does not support source lookup
@@ -63,3 +63,4 @@ CommonSourceNotFoundEditor_0=Select a Context
 CommonSourceNotFoundEditor_1=You must select an item in the debug view to use as context for source lookup path changes.\n\nFor example: the launch or one of the threads in the view.
 SourceLookupDialog_0=Launch configuration 
 SourceLookupDialog_1=\ is read only, no source lookup path changes will be saved
+SourceLookupDialog_add_edit_remove=Add, edit or remove source containers
