--- a/examples/org.eclipse.ui.forms.examples/build.properties
+++ b/examples/org.eclipse.ui.forms.examples/build.properties
@@ -13,5 +13,7 @@ bin.includes = plugin.xml,\
                *.jar,\
                examples.jar,\
                icons/,\
-               about.html
+               about.html,\
+               META-INF/,\
+               plugin.properties
 output.examples.jar = bin/
