Bug# 94153 -  [Dialogs] [KeyBindings] Command+W should close dialogs on OS X

--- a/bundles/org.eclipse.ui.carbon/fragment-carbon.properties
+++ b/bundles/org.eclipse.ui.carbon/fragment-carbon.properties
@@ -11,3 +11,6 @@
 
 providerName=Eclipse.org
 fragmentName=Eclipse UI MacOS X Enhancements
+
+command.closeDialog.name=Close Dialog
+command.closeDialog.desc=Closes the active Dialog
