--- a/bundles/org.eclipse.ui.cocoa/fragment-cocoa.properties
+++ b/bundles/org.eclipse.ui.cocoa/fragment-cocoa.properties
@@ -12,3 +12,6 @@
 
 providerName=Eclipse.org
 fragmentName=Eclipse UI MacOS X Enhancements
+
+command.closeDialog.name=Close Dialog
+command.closeDialog.desc=Closes the active Dialog
