--- a/bundles/org.eclipse.ui.ide/plugin.properties
+++ b/bundles/org.eclipse.ui.ide/plugin.properties
@@ -223,6 +223,7 @@ PreferenceKeywords.Restore = restore
 PreferenceKeywords.State = state
 PreferenceKeywords.Encoding = encoding
 PreferenceKeywords.RecentWorkspaces = workspaces prompt recent startup
+PreferenceKeywords.RecentlyOpened = recent opened
 
 # TODO This stuff is just to help me work on the parsing of the menus extension
 # point.  It is likely not in its final form yet.
