--- a/bundles/org.eclipse.core.expressions/build.properties
+++ b/bundles/org.eclipse.core.expressions/build.properties
@@ -17,3 +17,4 @@ bin.includes = plugin.xml,\
 src.includes = about.html,\
                schema/
 source.. = src/
+jre.compilation.profile = J2SE-1.3
