bug 296566 - Use "subtle" icon decorators for Virtual Folders

--- a/bundles/org.eclipse.ui.ide/plugin.properties
+++ b/bundles/org.eclipse.ui.ide/plugin.properties
@@ -95,6 +95,8 @@ openLocalFile.description= Opens a File
 GoToResourceAction.label = &Resource...
 DecoratorLinkedResource.label = Linked Resources
 DecoratorLinkedResource.description = Adds an icon decoration to linked resources.
+DecoratorVirtualResource.label = Virtual Folders
+DecoratorVirtualResource.description = Shows an icon for virtual folders. 
 DecoratorSpecificContentType.label = File Icons Based On Content Analysis
 DecoratorSpecificContentType.description = Displays an icon based on the examination of the contents of a file. This yields a more precise answer than one derived simply from the file name.
 DecoratorSpecificResourceFilterType.label = Containers with Resource Filters
