Bug 296565 -  Make group creation an advanced option in the folder

--- a/bundles/org.eclipse.ui.ide/.project
+++ b/bundles/org.eclipse.ui.ide/.project
@@ -31,4 +31,11 @@
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.eclipse.pde.api.tools.apiAnalysisNature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>eeee</name>
+			<type>2</type>
+			<locationURI></locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
