--- a/org.eclipse.ui.workbench.texteditor/src/org/eclipse/ui/texteditor/EditorMessages.properties
+++ b/org.eclipse.ui.workbench.texteditor/src/org/eclipse/ui/texteditor/EditorMessages.properties
@@ -108,6 +108,7 @@ FindReplace_CloseButton_label=Close
 FindReplace_Status_noMatch_label=String Not Found
 FindReplace_Status_replacement_label=1 Match replaced
 FindReplace_Status_replacements_label={0} matches replaced
+FindReplace_Status_wrapped_label=Wrapped search
 
 FindNext_Status_noMatch_label=String Not Found
 
