Bug 295524 Need to devise a strategy for merging user changes to the UI with the application's UI definition

--- a/bundles/org.eclipse.e4.ui.workbench/plugin.xml
+++ b/bundles/org.eclipse.e4.ui.workbench/plugin.xml
@@ -23,4 +23,11 @@
          </adapter>
       </factory>
    </extension>
+   <extension
+         point="org.eclipse.emf.ecore.extension_parser">
+      <parser
+            class="org.eclipse.e4.workbench.ui.internal.E4XMIResourceFactory"
+            type="e4xmi">
+      </parser>
+   </extension>
 </plugin>
