Bug 297400 - Create an E4 base application

--- a/examples/org.eclipse.e4.demo.e4photo/build.properties
+++ b/examples/org.eclipse.e4.demo.e4photo/build.properties
@@ -7,5 +7,6 @@ bin.includes = META-INF/,\
                OSGI-INF/,\
                css/,\
                icons/,\
-               images/
+               images/,\
+               xmi/
 source.. = src/
