--- a/examples/org.eclipse.e4.demo.e4photo/plugin.xml
+++ b/examples/org.eclipse.e4.demo.e4photo/plugin.xml
@@ -63,5 +63,14 @@
          </property>
       </product>
    </extension>
+   <extension
+         id="PhotoDemo"
+         name="Photo Demo"
+         point="org.eclipse.e4.workbench.model">
+      <model
+            parentID="E4MainWindow"
+            location="xmi/photoDemo.xmi">
+      </model>
+   </extension>
 
 </plugin>
