--- a/ant/org.eclipse.ant.tests.core/.classpath
+++ b/ant/org.eclipse.ant.tests.core/.classpath
@@ -2,8 +2,8 @@
 <classpath>
 	<classpathentry kind="src" path="test plugin"/>
 	<classpathentry kind="src" path="tests"/>
-	<classpathentry output="test_support_bin" kind="src" path="test support"/>
+	<classpathentry kind="src" output="test_support_bin" path="test support"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
