--- a/ant/org.eclipse.ant.tests.core/build.properties
+++ b/ant/org.eclipse.ant.tests.core/build.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2000, 2008 IBM Corporation and others.
+# Copyright (c) 2000, 2009 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -21,7 +21,8 @@ bin.includes = plugin.xml,\
                META-INF/
                
 source.anttestscore.jar = test plugin/,\
-                         tests/,\
-                         buildfiles/
+                          tests/
 source.lib/antTestsSupport.jar = test support/
 jars.compile.order=anttestscore.jar,lib/antTestsSupport.jar
+output.lib/antTestsSupport.jar = test_support_bin/
+output.anttestscore.jar = bin/
