--- a/ant/org.eclipse.ant.tests.ui/build.properties
+++ b/ant/org.eclipse.ant.tests.ui/build.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2004, 2008 IBM Corporation and others.
+# Copyright (c) 2004, 2009 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -19,11 +19,12 @@ bin.includes = plugin.xml,\
                META-INF/
                
 source.anttestsui.jar = test plugin/,\
-						Ant Editor Tests/,\
-						Ant Debug Tests/,\
-						External Tools/,\
-						Ant Tests/,\
-                        buildfiles/
+                        Ant Editor Tests/,\
+                        Ant Debug Tests/,\
+                        External Tools/,\
+                        Ant Tests/
 						
 source.lib/antUITestsSupport.jar = test support/
 jars.compile.order=anttestsui.jar,lib/antUITestsSupport.jar
+output.lib/antUITestsSupport.jar = test_support_bin/
+output.anttestsui.jar = bin/
