--- a/org.eclipse.debug.core/build.properties
+++ b/org.eclipse.debug.core/build.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2000, 2005 IBM Corporation and others.
+# Copyright (c) 2000, 2009 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -17,3 +17,4 @@ bin.includes = .options,\
 source.. = core/
 src.includes = about.html,\
                schema/
+output.. = bin/
