--- a/org.eclipse.debug.examples.core/build.properties
+++ b/org.eclipse.debug.examples.core/build.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2005, 2007 IBM Corporation and others.
+# Copyright (c) 2005, 2009 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -8,7 +8,9 @@
 # Contributors:
 #     IBM Corporation - initial API and implementation
 ###############################################################################
-source.. = src/
+source.. = src/,\
+           src_ant/,\
+           pdavm/src/
 output.. = bin/
 bin.includes = plugin.xml,\
                pdavm/,\
@@ -17,5 +19,4 @@ bin.includes = plugin.xml,\
                .,\
                readme.html,\
                samples/
-src.includes = about.html,\
-               src/
+src.includes = about.html
