--- a/org.eclipse.debug.examples.ui/build.properties
+++ b/org.eclipse.debug.examples.ui/build.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-#  Copyright (c) 2005, 2008 IBM Corporation and others.
+#  Copyright (c) 2005, 2009 IBM Corporation and others.
 #  All rights reserved. This program and the accompanying materials
 #  are made available under the terms of the Eclipse Public License v1.0
 #  which accompanies this distribution, and is available at
@@ -16,7 +16,5 @@ bin.includes = plugin.xml,\
                META-INF/,\
                .,\
                icons/
-src.includes = src/,\
-               about.html,\
-               icons/,\
-               plugin.xml
+src.includes = about.html,\
+               icons/
