--- a/org.eclipse.ui.externaltools/build.properties
+++ b/org.eclipse.ui.externaltools/build.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2000, 2005 IBM Corporation and others.
+# Copyright (c) 2000, 2009 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -19,3 +19,4 @@ bin.includes = icons/,\
                about.html,\
                .,\
                META-INF/
+output.. = bin/
