--- a/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/views/DebugUIViewsMessages.properties
+++ b/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/views/DebugUIViewsMessages.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2000, 2006 IBM Corporation and others.
+# Copyright (c) 2000, 2009 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -27,6 +27,7 @@ BreakpointsView_9=disable
 BreakpointsView_0=Enable Breakpoint
 BreakpointsView_10=Error {0} Breakpoint
 BreakpointsView_11=An exception occurred while attempting to {0} the breakpoint.
+BreakpointsView_12=Breakpoints View Only
 BreakpointsView_1=Disable Breakpoint
 BreakpointWorkingSetPage_0=Breakpoint Working Set
 BreakpointWorkingSetPage_1=Enter a working set name and select breakpoints.
