Change see entries in webapp to be blue and italic

--- a/org.eclipse.help.webapp/src/org/eclipse/help/internal/webapp/WebappResources.properties
+++ b/org.eclipse.help.webapp/src/org/eclipse/help/internal/webapp/WebappResources.properties
@@ -172,8 +172,8 @@ IndexTypeinButton=Display
 IndexEmpty=There are no entries in the index.
 IndexPrevious=<< Previous
 IndexNext=Next >>
-See=see {0}
-SeeAlso=see also {0}
+See=See {0}
+SeeAlso=See also {0}
 
 # About page
 provider=Provider
