--- a/bundles/org.eclipse.ui.ide/plugin.properties
+++ b/bundles/org.eclipse.ui.ide/plugin.properties
@@ -224,6 +224,10 @@ PreferenceKeywords.State = state
 PreferenceKeywords.Encoding = encoding
 PreferenceKeywords.RecentWorkspaces = workspaces prompt recent startup
 PreferenceKeywords.RecentlyOpened = recent opened
+PreferenceKeywords.Directory = directory
+PreferenceKeywords.Project = project
+PreferenceKeywords.Archive = zip tar
+PreferenceKeywords.Settings = settings
 
 # TODO This stuff is just to help me work on the parsing of the menus extension
 # point.  It is likely not in its final form yet.
